--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
             }
             
             #about .heading h3 {
-                color: #ac3939;
+                color: white;
                 font-size: 20px;
             }
             
